# ODIN

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Cargo.toml  Dockerfile
apps/api/src/: error.rs  lib.rs  main.rs  report.rs  response.rs  routes.rs  state.rs  worker.rs
apps/api/src/routes/: auth.rs  incidents.rs  knowledge.rs  metrics.rs  system.rs
apps/api/tests/: api_integration.rs
apps/cli/: Cargo.toml  Dockerfile
apps/cli/src/: main.rs
apps/web/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
crates/decision-engine/: Cargo.toml
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: audit.rs  auth.rs  config.rs  jwt.rs  lib.rs  middleware.rs  neo4j_client.rs  ollama.rs  redis_client.rs  s3_client.rs
crates/intelligence-engine/: Cargo.toml
crates/intelligence-engine/src/: context.rs  engine.rs  lib.rs  ollama_pipeline.rs  pipeline.rs  reasoning.rs
crates/kernel/: Cargo.toml
crates/memory-engine/: Cargo.toml
crates/memory-engine/migrations/: 001_initial.sql  002_knowledge_objects.sql  003_users_audit_timeline.sql
crates/memory-engine/src/: builder.rs  consolidation.rs  engine.rs  lib.rs  pg_store.rs  store.rs  version.rs
crates/odin-core/: Cargo.toml
crates/odin-core/src/: lib.rs
crates/policy-gate/: Cargo.toml
crates/retrieval-engine/: Cargo.toml
crates/retrieval-engine/src/: engine.rs  lib.rs  qdrant.rs  ranking.rs  rl_feedback.rs  similarity.rs
deploy/monitoring/: prometheus.yml  promtail.yml
deploy/neo4j/: init.sh
deploy/nginx/: generate-certs.sh  nginx.conf
deploy/ollama/: entrypoint.sh
deploy/scripts/: backup-db.sh  restore-db.sh  smoke-test.sh
docs/00_OVERVIEW/: 01_EXECUTIVE_SUMMARY.md  02_VISION_AND_MISSION.md  03_PROBLEM_STATEMENT.md  04_PRODUCT_REQUIREMENTS.md  05_COMPETITIVE_ANALYSIS.md  AI_Commit_and_Push_Instructions.md
docs/01_PRODUCT/: 06_USER_PERSONAS.md  07_USER_STORIES.md  08_FUNCTIONAL_REQUIREMENTS.md  09_NON_FUNCTIONAL_REQUIREMENTS.md  10_SUCCESS_METRICS.md
docs/02_ARCHITECTURE/: 11_HIGH_LEVEL_ARCHITECTURE.md  12_COMPONENT_ARCHITECTURE.md  13_DATA_FLOW_ARCHITECTURE.md  14_SEQUENCE_DIAGRAMS.md  15_DEPLOYMENT_ARCHITECTURE.md
docs/03_DOMAIN/: 16_CANONICAL_INCIDENT.md  17_ENTITY_MODEL.md  18_EVIDENCE_MODEL.md  19_INVESTIGATION_MODEL.md  20_RELATIONSHIP_MODEL.md  Canonical_Incident.md  Entity_Model.md  Evidence_Model.md  IOC_Model.md  Incident_Model.md  Playbook_Model.md  Relationships.md  Technique_Model.md
docs/04_MEMORY_ENGINE/: Embedding_Strategy.md  Knowledge_Extraction.md  Knowledge_Graph.md  Memory_Lifecycle.md  Similarity_Algorithm.md  Similarity_Scoring.md  Threat_Memory.md
docs/04_THREAT_MEMORY/: 21_THREAT_MEMORY_ARCHITECTURE.md  22_MEMORY_BUILDER.md  23_SIMILARITY_ENGINE.md  24_INVESTIGATION_DIFF_ENGINE.md  25_MEMORY_LIFECYCLE.md
docs/05_AI/: 26_AI_ARCHITECTURE.md  27_REASONING_ENGINE.md  28_NARRATIVE_ENGINE.md  29_EXPLAINABILITY_ENGINE.md  30_EVALUATION_FRAMEWORK.md  AI_Architecture.md  Evaluation.md  Hallucination_Control.md  MITRE_Mapping.md  Narrative_Generation.md  Prompt_Design.md  Similarity_Explanation.md
docs/06_BACKEND/: 31_RUST_WORKSPACE.md  32_CRATE_ARCHITECTURE.md  33_API_SPECIFICATION.md  34_SERVICE_ARCHITECTURE.md  35_ERROR_HANDLING.md  APIs.md  Background_Jobs.md  Crates.md  Error_Handling.md  Logging.md  Services.md  Workspace.md
docs/07_FRONTEND/: 36_UI_ARCHITECTURE.md  37_DESIGN_SYSTEM.md  38_PAGES.md  39_COMPONENT_LIBRARY.md  40_STATE_MANAGEMENT.md  Components.md  Design_System.md  Graph_Explorer.md  Pages.md  State_Management.md  Timeline.md  UI_Architecture.md
docs/08_DATABASE/: 41_DATABASE_ARCHITECTURE.md  42_POSTGRESQL_SCHEMA.md  43_NEO4J_SCHEMA.md  44_QDRANT_SCHEMA.md  45_DATA_VERSIONING.md
docs/09_SECURITY/: 46_SECURITY_ARCHITECTURE.md  47_AUTHENTICATION.md  48_AUTHORIZATION.md  49_AUDIT_LOGGING.md  50_DATA_PROTECTION.md
docs/10_DEPLOYMENT/: 51_DEPLOYMENT_ARCHITECTURE.md  52_DOCKER_ARCHITECTURE.md  53_CONFIGURATION.md  54_MONITORING_AND_OBSERVABILITY.md  55_CI_CD_PIPELINE.md
docs/11_API/: 56_DOMAIN_EVENTS.md  57_REST_API.md  58_INTERNAL_EVENTS.md  59_PLUGIN_SYSTEM.md  60_CONFIGURATION_REFERENCE.md
docs/12_TESTING/: 61_TESTING_STRATEGY.md  62_UNIT_TESTING.md  63_INTEGRATION_TESTING.md  64_END_TO_END_TESTING.md  65_PERFORMANCE_TESTING.md
mock_datas/: mock_container_escape.json  mock_data_exfil.json  mock_incident_1.json  mock_incident_2.json  mock_insider_threat.json  mock_iot_botnet.json  mock_lateral_movement.json  mock_log4j_exploit.json  mock_phishing_campaign.json  mock_ransomware.json  mock_supplychain_dll.json
(+218 files in other folders)
