[package]
name = "odin-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
odin-core = { path = "../../crates/odin-core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
