[package]
name = "odin-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
odin-core = { path = "../../crates/odin-core" }
odin-infrastructure = { path = "../../crates/infrastructure" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
tower = { version = "0.4", features = ["util", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

