[package]
name = "odin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
odin-core = { path = "../../crates/odin-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
