[package]
name = "odin-memory-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
odin-kernel = { path = "../kernel" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
