[package]
name = "odin-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
odin-kernel = { path = "../kernel" }
odin-intelligence-engine = { path = "../intelligence-engine" }
odin-memory-engine = { path = "../memory-engine" }
odin-retrieval-engine = { path = "../retrieval-engine" }
odin-decision-engine = { path = "../decision-engine" }
odin-policy-gate = { path = "../policy-gate" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
